Homepage Spacing Fixes

--- a/src/components/BackGroundVideo/BackGroundVideo.scss
+++ b/src/components/BackGroundVideo/BackGroundVideo.scss
@@ -129,6 +129,7 @@
       .intro-title2 {
         font-size: 20px;
         font-weight: 500;
+        margin-bottom: 0;
       }
       .subtitle{
         margin-top: 0.5rem;
