--- a/src/sections/Home/CovidSafety/CovidSafety.scss
+++ b/src/sections/Home/CovidSafety/CovidSafety.scss
@@ -10,16 +10,20 @@
     text-align: center;
     font-weight: 500;
     position: absolute;
-    left: 33%;
-    margin-top: 3rem;
+    left: 35%;
+    bottom: -467%;
     z-index: 999;
     color: $primary-color;
     @media #{$sm,$md} {
       font-size: 22px;
       position: static;
       left: 0;
-      margin-top: 0;
+      bottom: 0;
       text-align: center;
+    }
+    @media #{$lg} {
+      left: 30%;
+      bottom: -169%;
     }
   }
   .Covid {
