--- a/src/sections/Home/InfoTabs/InfoTabs.scss
+++ b/src/sections/Home/InfoTabs/InfoTabs.scss
@@ -1,7 +1,7 @@
 .home-page {
   .info-tabs {
     padding-top: 3rem;
-    @media #{$sm} {
+    @media #{$sm,$md} {
       padding-top: 2rem;
     }
       .InfoTitle {
@@ -10,9 +10,19 @@
         text-transform: uppercase;
         text-align: center;
         font-weight: 500;
+        position: absolute;
+        left: 36%;
+        bottom: -20%;
         color: $primary-color;
-        @media #{$sm} {
+        @media #{$sm,$md} {
           font-size: 22px;
+          position: static;
+          left: 0;
+          bottom: 0;
+        }
+        @media #{$lg} {
+          left: 32%;
+          bottom: 54%;
         }
       }
     @-webkit-keyframes ripple-white {
@@ -130,7 +140,7 @@
       padding: 40px 5px;
       transition: .5s;
       @media #{$sm} {
-        padding: 30px 0;
+        padding: 0 0 30px 0;
       }
     }
     .divstyle:hover {
