--- a/src/sections/Home/OurPrograms/OurPrograms.scss
+++ b/src/sections/Home/OurPrograms/OurPrograms.scss
@@ -1,7 +1,7 @@
 .home-page {
   .our-programs {
-    padding-top: 3rem;
-    @media #{$sm} {
+    padding-top: 7rem;
+    @media #{$sm ,$md} {
       padding-top: 2rem;
     }
     .programs {
